Fix icon overlapping text in Safari

--- a/static_dir/style.scss
+++ b/static_dir/style.scss
@@ -115,13 +115,19 @@ pre, code {
         }
     }
     .message-icon {
-        height: 100%;
         font-size: 24px;
         display: inline-block;
         padding: 5px 7px;
     }
 
+    div.message-icon {
+        text-align: center;
+        width: 42px;
+        padding: 0px;
+    }
+
     .message {
+        width: 568px;
         height: 100%;
         display: inline-block;
     }
